	PR c++/50473 	* decl.c (cp_finish_decl): Don't try to process a non-dependent 	constant initializer for a reference. 	* pt.c (value_dependent_expression_p): A reference is always 	dependent. 	* call.c (extend_ref_init_temps_1): Also clear TREE_SIDE_EFFECTS 	on any NOP_EXPRs.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@217672 138bc75d-0d04-0410-961f-82ee72b054a4